[gd_scene load_steps=2 format=3 uid="uid://cf68ucf56tjp1"]

[ext_resource type="Script" path="res://UI/options_menu.gd" id="1_0cijd"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0cijd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 21
alignment = 1

[node name="masterTxt" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Master Volume"
horizontal_alignment = 1

[node name="masterSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="Separator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 21
alignment = 1

[node name="fxTxt" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SFX Volume"
horizontal_alignment = 1

[node name="fxSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 21
alignment = 1

[node name="musicTxt" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Music Volume"
horizontal_alignment = 1

[node name="musicSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="backBtn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/masterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/fxSlider" to="." method="_on_fx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3/musicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/backBtn" to="." method="_on_back_btn_pressed"]
